# trackdidia

./: .coveragerc  .credo.exs  .gitignore  .project  .pydevproject  .travis.yml  LICENSE  PRD.md  README.md  app.yaml  credentials.tar.gz.enc  cron.yaml  gulpfile.js  index.html  index.yaml  karma.conf.js  main.py  mix.exs  package-lock.json  package.json  quotes.json  requirements.txt  router.py  specs.md  task.py  test_task.py  test_tracking.py  test_user.py  test_utils.py  tracking.py  tsconfig.json  user.py  vite.config.ts
assets/: brunch-config.js  package-lock.json  package.json
assets/css/: app.scss  home.scss
backend/: app.yaml  appengine_config.py  echo-v1_swagger.json  index.html  setup.cfg
backend/public/: index.html
backend/trackdidia/: main.py  main_test.py
config/: config.exs  dev.exs  prod.exs  test.exs
controllers/: handlers.py  response_producer.py
lib/: .ex
lib/trackdidia/: application.ex  repo.ex
lib/trackdidia_web/: endpoint.ex  gettext.ex  router.ex  socket.ex  web.ex
models/: base_test.py  custom_exceptions.py  stats.py  task.py  test_task.py  test_tracking.py  test_user.py  test_utils.py  tracking.py  user.py  utils.py
priv/repo/: dummy.exs  seeds.exs
scripts/: backend-install.sh  run-tests-and-build.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: app-context.tsx  use-daily-entry.ts  use-gtd.ts  (+2 more)
test/: test_helper.exs
trackdidia/: constants.py  main.py  router.py
views/: index.html
web-client/: package.json
(+185 files in other folders)
