[package]
name = "trackdidia"
version = "0.1.0"
description = "Trackdidia desktop app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
